fixed like button on mobile.

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -318,6 +318,12 @@ input[type="password"] {
       .post-stats {
         padding: 0;
 
+        .icons {
+          .like-btn {
+            margin-right: .5rem;
+          }
+        }
+
         .text {
           margin-left: 0;
           font-size: .6rem;
